feat: push alarm night study allow or reject